--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-.error-format {
-    display: block;
-    margin-top: 100px;
-    font-size: 20px;
-}
-
-.error-format::after {
-    display: block;
-    width: 100px;
-    height: 100px;
-    content: url('./file/sadCat.png');
-    transform: scale(0.3);
+.spiner {
+left: 300px;
 }
