--- a/src/components/CardItem/card-item.css
+++ b/src/components/CardItem/card-item.css
@@ -4,6 +4,7 @@
   padding: 0px;
   border-radius: 0;
   box-shadow: 0px 4px 12px 0px #00000026;
+  position: relative;
 }
 
 .text {
@@ -19,9 +20,98 @@ height: 279px;
   margin: 0px;
   margin-bottom: 5px;
   font-size: 20px;
+  max-width: 200px;
+  justify-content: space-between;
+  overflow: hidden;
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .description_container {
   padding: 10px 15px;
   gap: 5px;
+  max-height: 255px;
+  box-sizing: border-box;
 }
+
+.rate {
+  display: block;
+  position: absolute;
+  font-size: 18px;
+  bottom: 5px;
+  right: 10px;
+}
+
+.rate > li {
+  margin-right: 4px !important;
+}
+
+.rating {
+  display: inline-block;
+  min-width: 30px;
+  height: 30px;
+  border: 2px solid;
+  border-radius: 50%;
+font-size: 12px;
+font-weight: 400;
+line-height: 28px;
+text-align: center;
+right: 0px;
+}
+
+.header-movie-description {
+  width: 237px;
+}
+
+.red {
+  border-color: #E90000;
+}
+
+.orange {
+  border-color: #E97E00;
+}
+
+.yellow {
+  border-color: #E9D100;
+}
+
+.green {
+  border-color: #66E900;
+}
+
+.genre_container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.description {
+  display: inline-block;
+  max-height: 200px;
+}
+
+@media screen and (max-width: 767px) {
+  .header-movie-description {
+   width:auto;
+  }
+  .image_mobile {
+  width: 60px;
+  height: 91px;
+  float: left;
+  margin: 5px;
+}
+
+.movie-card_mobile {
+  max-width: 388px;
+  max-height: 245px;
+}
+
+.movie-card-container_mobile {
+  display: block;
+}
+
+.description_container_mobile {
+  display: block;
+} }
+
