--- a/src/components/RequestForm/request-form.css
+++ b/src/components/RequestForm/request-form.css
@@ -9,3 +9,11 @@
     font-size: 16px;
     outline: 0;
     }
+    @media screen and (max-width: 767px) {
+      .input {
+        width: 310px;
+        margin: 30px auto;
+      }
+    }
+      
+      
